<resources>
    <string name="app_name">FoodTask</string>
    <string name="dg_select_quantity_total_divider">/</string>

    <string name="common_abort">Отменить</string>
    <string name="common_add">Добавить</string>
    <string name="common_clear_all">Очистить все</string>
    <string name="common_pay">Оплатить</string>

    <string name="order_total">Итого:</string>
    <string name="common_multiplication">x</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_data_load">Ошибка загрузки данных</string>
    <string name="common_all">ВСЕ</string>
    <string name="common_products">Товары</string>
    <string name="common_history">История</string>
    <string name="common_reports">Отчеты</string>
    <string name="common_settings">Настройка</string>
    <string name="common_support">Поддержка</string>
    <string name="common_exit">Выйти</string>
    <string name="dummy_user">Вася Иванов</string>
    <string name="dummy_email">Chikdde@Mdff.dfdf</string>
    <string name="error_implement_fragment_container">fragment must implement IFragmentContainer</string>
    <string name="order_empty_description">Добавьте товары из каталога, а затем выберите способ оплаты</string>
    <string name="order_no_items">Товаров нет</string>
    <string name="common_zero">0</string>
    <string name="order_payment_success">Платеж успешно совершен</string>
</resources>
