<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main_products"
            android:icon="@drawable/ic_add_shopping_cart"
            android:title="@string/common_products" />
        <item
            android:id="@+id/nav_main_history"
            android:icon="@drawable/ic_insert_menu_history"
            android:title="@string/common_history" />
        <item
            android:id="@+id/nav_main_report"
            android:icon="@drawable/ic_menu_report"
            android:title="@string/common_reports" />
        <item
            android:id="@+id/nav_third_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/common_settings" />
        <item
            android:id="@+id/nav_third_support"
            android:icon="@drawable/ic_menu_support"
            android:title="@string/common_support" />
    </group>
</menu>